deploy/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Date_50_MRR_is_out_of_Contract__c</fullName>
        <inlineHelpText>Based on Oracle date - this is the date 50% of the accounts total MRR will be out of contract.</inlineHelpText>
        <label>Date 50% MRR is out of Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <label>Deactivation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dedicated_Hosting_Points_Monthly__c</fullName>
        <description>shows point for commissions for partners for dedicated opportunities</description>
        <inlineHelpText>Points partner has earned for Dedicated Hosting opportunities.</inlineHelpText>
        <label>Dedicated Hosting Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deviation_Symbol__c</fullName>
        <formula>IF(( Contract_Deviation__c = true),IMAGE(&quot;https://na3.salesforce.com/servlet/servlet.FileDownload?file=01550000000WjIG&quot;, &quot;Contract Deviation Picture&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deviation Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Clients__c</fullName>
        <inlineHelpText>Company name of the end user(s)/client(s) if the customer hosts a third party on the servers they have with us.</inlineHelpText>
        <label>End Users</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the partner should NOT have access to the Partner Portal.</inlineHelpText>
        <label>Disable Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Partner_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Partner Showcase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote Select Partners that should display in the Partner Search on the Partner Website.</description>
        <inlineHelpText>Please select if the Select Partner should display in the Partner Search on the Partner Website.</inlineHelpText>
        <label>Display in Partner Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_offer_Tier_1_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>tier 1 support for cloud, cloud drive/jungle disk and email- partner application</description>
        <inlineHelpText>Select if they offer tier 1 support for Cloud, Cloud Drive/Jungle Disk and email</inlineHelpText>
        <label>Do you offer Tier 1 Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_CAM__c</fullName>
        <label>Email CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EmailCAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Hosting_Points_Monthly__c</fullName>
        <description>shows points for commissions for partners for email opportunities</description>
        <inlineHelpText>Points partner has accumulated for Email opportunities.</inlineHelpText>
        <label>Email Hosting Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Growth_3_yr__c</fullName>
        <inlineHelpText>Data from DnB - Employee Growth Percent over 3 years</inlineHelpText>
        <label>Employee Growth (3 yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exclude_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to exclude partners from receiving new partner agreement - March 2011</description>
        <label>Exclude Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <description>Executive Sponsor for the ESP Project</description>
        <inlineHelpText>Executive Sponsor for the ESP Project</inlineHelpText>
        <label>Executive Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Alan Schoenbaum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruce Knooihuizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Belle-Isle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirk Elmendorf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glenn Reinus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graham Weston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kip Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klee Kleber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lanham Napier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lew Moorman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pat Condon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troy Toman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HooversId__c</fullName>
        <label>HooversId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosting_IT_Budget__c</fullName>
        <inlineHelpText>The accounts total hosting IT budget based on market research from Marketing.</inlineHelpText>
        <label>Hosting IT Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_did_you_first_hear_about_RS_Cloud__c</fullName>
        <label>How did you first hear about RS Cloud</label>
        <picklist>
            <picklistValues>
                <fullName>An existing Rackspace customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet article/blog/</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet advert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_heard_about_Partner_Program__c</fullName>
        <label>How heard about Partner Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IB_Sales_Rep_s_Team__c</fullName>
        <formula>Partner_SME__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB Sales Rep&apos;s Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Block_Owner__c</fullName>
        <label>IP Block Owner</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Budget__c</fullName>
        <label>IT Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Spend__c</fullName>
        <label>IT Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ingram_Micro_Customer_Number__c</fullName>
        <description>used for the Ingram Micro site submission</description>
        <inlineHelpText>Entered from the form for Ingram Micro Partner Application.</inlineHelpText>
        <label>Ingram Micro Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_DDI__c</fullName>
        <inlineHelpText>Brought over by an Online Lead</inlineHelpText>
        <label>Initial DDI</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Segment__c</fullName>
        <label>Internal Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IoD_Member_Number__c</fullName>
        <description>Their IoD Memeber Number.</description>
        <inlineHelpText>Please enter the IoD Member Number for the lead.</inlineHelpText>
        <label>IoD Member Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_End_User__c</fullName>
        <inlineHelpText>Select “End User” if the client is using Rackspace services for their own website/applications. Select “Channel” if this is a 3rd party company which will be providing a service/hosted solution to another user.</inlineHelpText>
        <label>Is End User?</label>
        <picklist>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jungle_Disk_CAM__c</fullName>
        <label>Jungle Disk CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JungleDiskCAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jungle_Disk__c</fullName>
        <description>used for partner accounts</description>
        <inlineHelpText>Please enter the Jungle Disk #.</inlineHelpText>
        <label>Jungle Disk #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDT_Nurture_Picture__c</fullName>
        <formula>IF(LDT_Nurture__c,IMAGE(&quot;https://na3.salesforce.com/servlet/servlet.FileDownload?file=01550000000WzeL&quot;, &quot;Nurture Picture for Account&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDT Nurture Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDT_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked when an opportunity for the account is set to nurture.</description>
        <inlineHelpText>This is checked when an opportunity for the account is set to nurture.</inlineHelpText>
        <label>LDT Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Paid_MRR__c</fullName>
        <description>MRR referred in the last 12 months.</description>
        <inlineHelpText>This is the MRR that the partner has referred in the last 12 months.  It will be uploaded from the commission tool.</inlineHelpText>
        <label>Referred MRR - Last 12 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <description>Total MRR referred</description>
        <inlineHelpText>This is the total MRR that the partner has referred.  It will be uploaded from the commission tool once a month.</inlineHelpText>
        <label>Last Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Detractor_Comment_Hidden__c</fullName>
        <label>Latest Detractor Comment Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Passive_Comment_Hidden__c</fullName>
        <label>Latest Passive Comment Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Promoter_Comment_Hidden__c</fullName>
        <label>Latest Promoter Comment Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Recommendation_Hidden__c</fullName>
        <label>Latest Recommendation Hidden</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Recommendation__c</fullName>
        <formula>value(left( Latest_Recommendation_Hidden__c ,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Survey_Comments__c</fullName>
        <formula>if( Latest_Promoter_Comment_Hidden__c =&quot;&quot;, (if(Latest_Detractor_Comment_Hidden__c=&quot;&quot;, Latest_Passive_Comment_Hidden__c 
,Latest_Detractor_Comment_Hidden__c)), Latest_Promoter_Comment_Hidden__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Survey Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>The company&apos;s legal name or what they are known as.</description>
        <inlineHelpText>The company&apos;s legal name or what they are known as.</inlineHelpText>
        <label>Legal Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Engagement__c</fullName>
        <label>Level of Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Discuss Rackspace with customers when they express interest in hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactively offer Rackspace as a service offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint marketing and customer acquisition efforts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <description>Monthly Recurring Revenue on Account</description>
        <inlineHelpText>Monthly Recurring Revenue on Account</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR_up_for_Renewal_Next_90_Days__c</fullName>
        <inlineHelpText>Based on Oracle data - this is the amount of MRR for the account that is up for renewal in the next 90 days.</inlineHelpText>
        <label>MRR up for Renewal Next 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mail_Reseller__c</fullName>
        <description>used for partner accounts</description>
        <inlineHelpText>Please enter the Mail Reseller #.</inlineHelpText>
        <label>Mail Reseller #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <label>Market Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising/Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services/Management Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment/Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government/Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Services/Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing/Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit/Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing/Media/Social Media/Content Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail/Wholesale Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel/Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Design/Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager__c</fullName>
        <description>this is the rep who is getting the partner on boarded</description>
        <inlineHelpText>The partner readiness rep is the rep responsible for the on-boarding of the partner.</inlineHelpText>
        <label>Partner Readiness Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <inlineHelpText>A full reference is a customer who a prospect can call and speak with. A verbal reference is a customer whose name you can mention if someone asks for verbal references.</inlineHelpText>
        <label>Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Reference</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marquee_Cusomter_Status__c</fullName>
        <description>used for cloud customer page</description>
        <label>Marquee Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Marquee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marquee Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marquee Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marquee_Rationale__c</fullName>
        <description>used for cloud customer</description>
        <label>Marquee Rationale</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wide Reach</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Menu_Pricing_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu Pricing Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Menu_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meta_Description__c</fullName>
        <label>Meta Description</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Dollar_Value_Customer_Engagement__c</fullName>
        <description>Minimum dollar value for customer engagement</description>
        <inlineHelpText>Minimum dollar value for customer engagement</inlineHelpText>
        <label>Min. Dollar Value - Customer Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monitoring_Level__c</fullName>
        <label>Monitoring Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to note if we have a NDA with the account.</description>
        <label>NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Count__c</fullName>
        <label>NPS Count</label>
        <summarizedField>Rackspace_Contacts__c.NPS__c</summarizedField>
        <summaryForeignKey>Rackspace_Contacts__c.Rackspace_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NPS_Roles_Count__c</fullName>
        <description>Number of roles associated to the account.</description>
        <inlineHelpText>This is the number of NPS roles associated with the account.</inlineHelpText>
        <label>NPS Roles Count</label>
        <summaryForeignKey>NPS_Role__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NPS_Surveys__c</fullName>
        <label>NPS Surveys</label>
        <summaryFilterItems>
            <field>Rackspace_Contacts__c.NPS_Survey__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Rackspace_Contacts__c.Rackspace_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name_of_End_User__c</fullName>
        <inlineHelpText>If you selected “Channel” in the field above, please put in the name of the end user If known/disclosed.</inlineHelpText>
        <label>Name of End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>used for cloud</description>
        <inlineHelpText>What is next for this customer? Additional sales opportunities? Significant events? Etc...</inlineHelpText>
        <label>Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Board_Date__c</fullName>
        <description>the date the partner went through on-boarding</description>
        <inlineHelpText>This is the date that the partner completed the on-boarding.</inlineHelpText>
        <label>On-Board Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OneSource__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier.  It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onyx_ID__c</fullName>
        <label>Onyx ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenStack_Date__c</fullName>
        <description>date openstack opportunity was first closed won</description>
        <inlineHelpText>This field is auto-populated when the first OpenStack opportunity is closed.  Used for reporting purposes.</inlineHelpText>
        <label>OpenStack Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Opps__c</fullName>
        <description>counts the number of open opps on the account</description>
        <inlineHelpText>This is the count of open opportunities on the account.</inlineHelpText>
        <label>Open Opps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Closed Rejected, Validation Pending, Contract Kickback</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Number__c</fullName>
        <description>Partner&apos;s Oracle Vendor Number from Accounting</description>
        <inlineHelpText>This is the partner&apos;s Oracle Vendor Number that is provided from Accounting</inlineHelpText>
        <label>Oracle Vendor Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_ID__c</fullName>
        <label>Original ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Application_Hosted__c</fullName>
        <description>Used to specify the applications that customers host with us. Required when Other is selected.</description>
        <inlineHelpText>Used to specify the other applications that customers host with us.</inlineHelpText>
        <label>Other Application Hosted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCI Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPAG__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Production Platform Availability Guarantee (UK Specific).</inlineHelpText>
        <label>PPAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paperwork_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperwork In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Active_Date__c</fullName>
        <label>Partner Active Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Affiliation__c</fullName>
        <description>Used to track the partner that referred the lead. This will not transfer to the opportunity or account related list.</description>
        <inlineHelpText>Used to track the partner that referred the lead. When the lead is converted the partner does not transfer to the account or opportunity partner related list.</inlineHelpText>
        <label>Partner Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Ingram Micro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Sent_Date__c</fullName>
        <label>Partner Agreement Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;ESVisible=1&quot; +
&quot;&amp;ESContactId={qvar0}&quot; +
&quot;&amp;ESCustomfield=Account__c&quot; +
&quot;&amp;ESCustomFieldValue=&quot; + Id +
&quot;&amp;ESSignatureType=2&quot; +
&quot;&amp;OFN=Unified+Rackspace+Partner+Agreement&quot; +
&quot;&amp;qvar0id=a0t500000001fMX&quot; +
&quot;&amp;templateid=a0m50000000ciAg&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;LG0=0&amp;LG1=Partner+Contract+Sent&amp;LG3=0&amp;LG4=1&quot; +
&quot;&amp;Qmode=4&quot; +
&quot;&amp;ESMessage=&quot; + Partner_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Agreement URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Body__c</fullName>
        <formula>&quot;Introducing the enhanced Rackspace Partner Program, designed to empower your cloud revolution.   The upgraded benefits are contained in a single partner agreement and provide a new and more beneficial compensation structure across dedicated, cloud, and email hosting.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Catalogue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If they have received a partner catalogue.</description>
        <inlineHelpText>If they have received a partner catalogue.</inlineHelpText>
        <label>Partner Catalogue</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>